--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,21 +1,16 @@
 name: Terraform
 
 on:
-  
   push:
     branches: [ "main" ]
 
-  
   workflow_dispatch:
-   
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
-    
     steps:
       - name: Git clone
-      - uses: actions/checkout@v4
-
+        uses: actions/checkout@v4
       
