added terraform init

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,3 +14,5 @@ jobs:
       - name: Git clone
         uses: actions/checkout@v4
       
+      - name: Terraform Init
+        run: Terraform init 
