--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - name: Git clone
         uses: actions/checkout@v4
+
+      - name: Install terraform
+        uses: hashicorp/setup-terraform@v3
       
       - name: Terraform Init
         run: Terraform init 
