--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,8 +14,8 @@ jobs:
       - name: Git clone
         uses: actions/checkout@v4
 
-      - name: Install terraform
+      - name: Install Terraform
         uses: hashicorp/setup-terraform@v3
-      
+
       - name: Terraform Init
-        run: Terraform init 
+        run: terraform init
