--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -19,3 +19,7 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
+
+      - name: Terraform Apply
+        run: terraform apply -auto-approve
+        
