--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -20,6 +20,12 @@ jobs:
       - name: Terraform Init
         run: terraform init
 
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v6.0.0
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1 
+
       - name: Terraform Apply
         run: terraform apply -auto-approve
-        
