added new files

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -12,6 +12,24 @@ on:
         - apply
         - destroy
 
+      region:
+        description: "Select your region"
+        required: true
+        type: choice
+        options:
+        - us-east-1
+        - us-east-2
+
+      ami_id:
+        description: "Provide AMI id"
+        required: true
+        type: string
+
+      instance_type:
+        description: "Provide instance type"
+        required: true
+        type: string
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -20,26 +38,32 @@ jobs:
       - name: Git clone
         uses: actions/checkout@v4
 
+      - name: Create tfvars file
+        run: |
+          cat <<EOF > terraform.tfvars
+          region = "${{ inputs.region }}"
+          ami_id = "${{ inputs.ami_id }}"
+          instance_type = "${{ inputs.instance_type }}"
+          EOF
+
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v3
-
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v6.0.0
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1 
+          aws-region: us-east-1
 
       - name: Terraform Init
-        run: terraform init          
+        run: terraform init
 
       - name: Terraform Apply or Destroy
-        run: | 
-          if [[ "${{ inputs.actions }}" == "apply" ]]
+        run: |
+          if [[ "${{ inputs.action }}" == "apply" ]]
           then
             terraform apply -auto-approve
-          else   
+          else
             terraform destroy -auto-approve
           fi
-            
