--- a/.github/workflows/tfvars.yaml
+++ b/.github/workflows/tfvars.yaml
@@ -44,7 +44,7 @@ jobs:
           aws-region: us-east-1
 
       - name: Terraform Init
-        run: terraform init -backend-config=key="${{ inputs.region }}"/terraform.tfstate
+        run: terraform init -backend-config=key="${{ inputs.environment }}"/terraform.tfstate
 
       - name: Terraform Apply or Destroy
         run: |
