--- a/.github/workflows/tfvars.yaml
+++ b/.github/workflows/tfvars.yaml
@@ -31,7 +31,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Create tfvars file
-        run: echo "${{ vars.TFVARS }}" > terraform.tfvars
+        run: | 
+          echo "${{ vars.TFVARS }}" > terraform.tfvars
+          cat terraform.tfvars
 
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v3
